@@ -71,6 +71,9 @@
 /* Define to 1 if you have the `getpeerucred' function. */
 #undef HAS_GETPEERUCRED
 
+/* Define to 1 if you have the `mmap' function. */
+#undef HAS_MMAP
+
 /* Support SHM */
 #undef HAS_SHM
 
